--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server/server.js",
-    "dev":"nodemon ./server/server.js"
+    "dev": "nodemon ./server/server.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "log4js": "^6.7.1"
+    "log4js": "^6.7.1",
+    "mongoose": "^6.9.2"
   }
 }
