Añado paquete nodemailer

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "log4js": "^6.7.1",
-    "mongoose": "^6.9.2"
+    "mongoose": "^6.9.2",
+    "nodemailer": "^6.9.1"
   }
 }
