ENV Persistencia Ordenes y Categoria

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ PAISES_PERSISTENCIA = 'MongoDB'
 PRODUCTOS_PERSISTENCIA = 'MongoDB'
 CARRITOS_PERSISTENCIA = 'MongoDB'
 USERS_PERSISTENCIA = 'archivo'
+ORDENES_PERSISTENCIA = 'MongoDB'
+CATEGORIA_PERSISTENCIA = 'MongoDB'
