ENV Mensajes Persistencia

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ CARRITOS_PERSISTENCIA = 'MongoDB'
 USERS_PERSISTENCIA = 'archivo'
 ORDENES_PERSISTENCIA = 'MongoDB'
 CATEGORIA_PERSISTENCIA = 'MongoDB'
+MENSAJES_PERSISTENCIA = 'MongoDB'
