--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/CharlyMoreno/ecommerce-coder-32125#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.1",
@@ -28,7 +29,8 @@
     "jsonwebtoken": "^9.0.0",
     "log4js": "^6.7.1",
     "mongoose": "^6.9.2",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
